--- a/frontend/src/components/Modals/Search/Search.css
+++ b/frontend/src/components/Modals/Search/Search.css
@@ -19,7 +19,7 @@
     opacity: 1;
 }
 
-.modal-search::after {
+.modal-overlay {
     content: "";
     width: 100%;
     height: 100%;
@@ -29,6 +29,7 @@
     left: 0;
     opacity: 0.5;
 }
+
 
 .modal-wrapper {
     max-width: 800px;
