--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -147,3 +147,14 @@ input[type="number"]::-webkit-inner-spin-button {
         max-width: 350px;
     }
 }
+
+/* React-slick css  */
+
+.slick-slide>div {
+    margin: 0 10px;
+
+}
+
+.slick-list {
+    margin: 0 -10px;
+}
